--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/bitclaw/react-es6#readme",
   "dependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "express": "^4.14.0"
   }
 }
