--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "JavaScript web applicationusing React with Flux/Relay on the frontend and Node/Express with GraphQL and MongoDB on the backend.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2",
-    "build": "babel lib -d dist --presets es2015,stage-2",
-    "serve": "node dist/index.js"
+    "start": "nodemon server/server.js --exec babel-node",
+    "build": "babel server -d dist",
+    "serve": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
+    "mocha": "^2.5.3",
     "nodemon": "^1.9.2"
   }
 }
