--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
-  "name": "react-es6",
-  "version": "1.0.0",
-  "description": "JavaScript web applicationusing React with Flux/Relay on the frontend and Node/Express with GraphQL and MongoDB on the backend.",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server/server.js --exec babel-node",
-    "build": "babel server -d dist",
-    "serve": "node dist/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bitclaw/react-es6.git"
-  },
-  "keywords": [
-    "React"
-  ],
-  "author": "Daniel C. <bitclaw@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bitclaw/react-es6/issues"
-  },
-  "homepage": "https://github.com/bitclaw/react-es6#readme",
-  "dependencies": {
-    "express": "^4.14.0"
-  },
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.11.0",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2"
+    "react-scripts": "0.8.5"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
